# CruiseGPT_AI

./: .gitignore  .replit  README.md  agent.py  agent_cruise_infor.py  agent_server.py  db.py  db_tool.py  input_test.py  pyproject.toml  requirements.txt  utils.py
object/: cruise_search_object.py
origin/: api.py  api_server.py  chat_service.py  fastapi_server.py  server_manager.py  start.py  start_servers.py
promt/: exact_infor_prompt.py  supervior_prompt.py
scripts/: run_api_server.sh
src/: agent_server.py  langgraph.json
src/agent/: agent.py  agent_cruise_infor.py  agent_main.py
src/agent/agent_members/: cruise_agent.py
src/agent/objects/: objects.py
src/agent/prompts/: agent_main_prompt.py  cruise_agent_prompt.py  exact_infor_prompt.py
src/agent/tools/: db.py  db_tool.py
src/agent/tools/db/: db.py
src/agent/tools/db/schema/: cabin_item.py  order_item.py
src/agent/tools/utils/: utils.py
tests/: assistant_test.py  input_test.py
